[package]
name = "blanqr"
version = "0.1.0"
edition = "2021"
description = "A lightweight Windows app to fill screen with a single color"
authors = ["blanqr"]

[dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_Controls_Dialogs",
    "Win32_UI_Input_KeyboardAndMouse",
]}

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "blanqr"
path = "src/main.rs"
